--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,11 +2,7 @@ body {
   background-image: url('background1.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+  background-size: cover;}
 
 h1 { 
   color: rgb(78, 77, 77); 
